@@ -29,7 +29,7 @@ public abstract class EmiApiMixin {
       at = @At(value = "INVOKE", target = "Ljava/util/List;get(I)Ljava/lang/Object;"),
       cancellable = true)
   private static void stopEmptyRecipeTabs(EmiIngredient stack, CallbackInfo ci) {
-    if (EmiApi.getRecipeManager().getRecipesByOutput(stack.getEmiStacks().get(0)).stream()
+    if (EmiApi.getRecipeManager().getRecipesByOutput(stack.getEmiStacks().getFirst()).stream()
         .noneMatch(KnownItems::areAllKnown)) ci.cancel();
   }
 
